2012-01-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m: fix possible nul pointer dereference.
	* Source/NSHost.m: cache failed lookup by name so that repeated
	lookups for a band host name do not cause repeated DNS queries.

2012-01-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLRequest.m: be tolerant about missing URL on init.

2012-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFIInvocation.m: Fix selector types comparison to use the
	correct function for checking equivalent types.

2012-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* config/pathtls.m4:
	* config/pathxml.m4:
	Remove incorrect sed call to tidy flags (as suggested by Felix Geyer
	in bug #34835).

2012-01-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSBundle.m (addBundlePath): Handle nested subdirectories
	(e.g.
	[NSBundle pathForLibraryResource:
	@"Generic-PostScript_Printer-Postscript" ofType: @"ppd"
	inDirectory: @"PostScript/PPD"] was previously failing.)

2012-01-12 10:10  theraven

	* libs/base/trunk/Headers/Foundation/NSException.h: Tweak the
	exception mismatch handling so that if base is using native exceptions
	and the user doesn't specify an exception mode then we just don't define
	the NS_ macros, so code that uses @try etc. compiles without requiring
	every cc line to specify a long -D flag just to be allowed to #import
	Foundation.h.

2012-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Remove cached paths when the owning bundle is
	deallocated.  Use cache to determine which resource directories to
	search.

2012-01-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Crude/simple caching of directory contents to
	test impact on theme loading ... needs reverting or improving.

2012-01-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConcretePointerFunctions.m:
	* Source/NSSocketPort.m:
	* Source/unix/NSStream.m:
	* Source/NSKeyedUnarchiver.m:
	* Source/NSZone.m:
	* Source/NSMessagePort.m: